# anagram-odyssey

./: .env  .env.example  .eslintrc  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
backend-odyssey/: Cargo.toml
backend-odyssey/src/: definition.rs  favorite_words.rs  letters.rs  lib.rs  sharable.rs  storage.rs  utils.rs  word_history.rs  word_of_day.rs
backend-odyssey/tests/: integration_tests.rs
public/: index.html
src/: App.js  index.css  index.js
src/components/: AnagramsTab.js  DefinitionModal.js  ErrorBoundary.js  FavoritesTab.js  InputForm.js  Letters.js  ShareModal.js  SideBar.js  TabButton.js  WordInfoModal.js  WordOfTheDay.js
src/hooks/: useWasmInit.js
src/styles/: Letters.css
src/utils/: localStorage.js
