[package]
name = "anagram_odyssey"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
flate2 = "1.0"
regex = "1"
evalexpr = "11.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window", "console"] }
js-sys = "0.3"
once_cell = "1.17.1"


[dev-dependencies]
wasm-bindgen-test = "0.2"